CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/validationRules/CANNOT_UPDATE_CLOSED_FA.validationRule-meta.xml
<ValidationRule>
    <fullName>CANNOT_UPDATE_CLOSED_FA</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(PRIORVALUE(CDE_TYPE_STATUS__c))= &apos;CLS&apos;</errorConditionFormula>
    <errorMessage>Fiscal Agreement with Closed status cannot be edited.</errorMessage>
</ValidationRule>