CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/validationRules/Date_Rcv_Fisc_Agrmnt_LesThan_Begin_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Rcv_Fisc_Agrmnt_LesThan_Begin_Date</fullName>
    <active>true</active>
    <description>Fiscal Agreement receive date must be less than Effective Begin Date</description>
    <errorConditionFormula>DTE_RCV_AGRMT_FISCAL__c &gt; DTE_BEGIN_AGRMT__c</errorConditionFormula>
    <errorDisplayField>DTE_RCV_AGRMT_FISCAL__c</errorDisplayField>
    <errorMessage>Fiscal Agreement receive date must be less than Effective Begin Date</errorMessage>
</ValidationRule>