CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/validationRules/Restrict_PFA_finalize_for_In_Progress_BG.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_PFA_finalize_for_In_Progress_BG</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(ID_SERVICE__r.CDE_REQ_BGC_CHK_STATE__c, &quot;In Progress&quot;), OR(
ISPICKVAL(CDE_TYPE_STATUS__c, &quot;FIN&quot;),
ISPICKVAL(CDE_TYPE_STATUS__c, &quot;OPN&quot;)
))</errorConditionFormula>
    <errorMessage>Fiscal agreement can not be finalized because Background Check is in Progress for this Provider.</errorMessage>
</ValidationRule>