CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/validationRules/State_BG_Check_Incomplete.validationRule-meta.xml
<ValidationRule>
    <fullName>State_BG_Check_Incomplete</fullName>
    <active>true</active>
    <description>Project 337, JIRA CCCAP-4768</description>
    <errorConditionFormula>AND(
ISPICKVAL(ID_SERVICE__r.CDE_TYPE_PROVR__c, &quot;EFACH&quot;),
OR(
ISNULL(ID_SERVICE__r.DTE_FA_ReimEff__c),
NOT(ISPICKVAL(ID_SERVICE__r.CDE_REQ_BGC_CHK_STATE__c, &quot;Cleared&quot;))
),
OR(
ISPICKVAL(CDE_TYPE_STATUS__c, &quot;FIN&quot;),
ISPICKVAL(CDE_TYPE_STATUS__c, &quot;OPN&quot;)
),
ISPICKVAL(PRIORVALUE(CDE_TYPE_STATUS__c), &quot;DFT&quot;)
)</errorConditionFormula>
    <errorMessage>State required background check is not completed. Please contact  State CCCAP Team</errorMessage>
</ValidationRule>