CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/validationRules/Staus_Close_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Staus_Close_Validation</fullName>
    <active>true</active>
    <description>Without Reason of  closure user can&apos;t change status to &apos;Closed&apos;.</description>
    <errorConditionFormula>AND( ISPICKVAL( CDE_TYPE_STATUS__c , &apos;CLS&apos;) , ISPICKVAL( CDE_REASON_END_AGRMT__c , &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>CDE_TYPE_STATUS__c</errorDisplayField>
    <errorMessage>Can not close the fiscal agreement without reason of closure.</errorMessage>
</ValidationRule>