CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_TYPE_STATUS__c</field>
        <operation>equals</operation>
        <value>DFT</value>
    </filters>
    <label>All</label>
</ListView>