CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CDE_TYPE_STATUS__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CDE_COUNTY_OWNER__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>