CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/listViews/conejos.listView-meta.xml
<ListView>
    <fullName>conejos</fullName>
    <columns>NAME</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CDE_TYPE_STATUS__c</columns>
    <columns>ID_SERVICE__c</columns>
    <columns>Provider_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_COUNTY__c</field>
        <operation>equals</operation>
        <value>conejos</value>
    </filters>
    <filters>
        <field>CDE_TYPE_STATUS__c</field>
        <operation>equals</operation>
        <value>OPN</value>
    </filters>
    <label>conejos</label>
</ListView>