CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/listViews/County_FA_Rio_Blanco.listView-meta.xml
<ListView>
    <fullName>County_FA_Rio_Blanco</fullName>
    <columns>NAME</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CDE_TYPE_STATUS__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>ID_SERVICE__c</columns>
    <columns>CDE_TYPE_FACILITY__c</columns>
    <columns>Owner_ID__c</columns>
    <columns>DTE_BEGIN_AGRMT__c</columns>
    <columns>DTE_END_AGRMT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_TYPE_STATUS__c</field>
        <operation>equals</operation>
        <value>CLS</value>
    </filters>
    <filters>
        <field>CDE_COUNTY__c</field>
        <operation>equals</operation>
        <value>Denver</value>
    </filters>
    <filters>
        <field>CDE_REASON_END_AGRMT__c</field>
        <operation>equals</operation>
        <value>PRT,EXP,NCH</value>
    </filters>
    <label>Rio Blanco County FA</label>
</ListView>