CHATS_SIT/force-app/main/default/objects/T_PROVR_FISCAL_AGREMENT__c/listViews/Custer_County_FA.listView-meta.xml
<ListView>
    <fullName>Custer_County_FA</fullName>
    <columns>NAME</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CDE_TYPE_STATUS__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>ID_SERVICE__c</columns>
    <columns>CDE_TYPE_FACILITY__c</columns>
    <columns>Owner_ID__c</columns>
    <columns>DTE_BEGIN_AGRMT__c</columns>
    <columns>DTE_END_AGRMT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDE_TYPE_STATUS__c</field>
        <operation>equals</operation>
        <value>OPN,FIN,DFT</value>
    </filters>
    <filters>
        <field>CDE_COUNTY__c</field>
        <operation>equals</operation>
        <value>custer</value>
    </filters>
    <label>Custer County FA</label>
</ListView>